# pypgflow

./: .gitignore  README.md  demo.sh  justfile
.github/workflows/: docker-publish.yml  release.yml
charts/pypgflow/: Chart.yaml  values.yaml
charts/pypgflow/templates/: _helpers.tpl  import-workflows-job.yaml  postgres-service.yaml  postgres-statefulset.yaml  postgrest-deployment.yaml  postgrest-service.yaml  swagger-deployment.yaml  swagger-service.yaml  workflows-configmap.yaml
cli/: pyproject.toml
cli/pypgflow/: database.py  main.py  models.py
database/init/: 01-init.sql  02-functions.sql  03-api-views.sql
deploy/docker/: .env.example  Dockerfile.cli  docker-compose.yml
docs/: api.md  just-installation.md
examples/: fraud_detection.yaml  order_processing.yaml
